@@ -1,10 +1,11 @@
-package com.teamChallenge.entity.user.review;
+package com.teamChallenge.entity.review;
 
 import com.teamChallenge.dto.response.ReviewResponseDto;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -30,17 +31,16 @@ public class ReviewMapper {
                 null);
     }
 
-    public List<ReviewResponseDto> toResponseDtoList(List<ReviewEntity> reviewList) {
-        return reviewList == null ? null : reviewList
+    public List<ReviewResponseDto> toResponseDtoList(List<ReviewEntity> entities) {
+        return entities == null ? null : entities
                 .stream()
                 .map(this::toResponseDto)
                 .toList();
     }
 
-    public List<ReviewEntity> toEntityListFromResponse(List<ReviewResponseDto> dtoList) {
-        return dtoList
-                .stream()
+    public List<ReviewEntity> toEntityListFromResponse(List<ReviewResponseDto> dtos) {
+        return dtos == null ? null : dtos.stream()
                 .map(this::toEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
